--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,6 @@
   "name": "Bugsy Assistant",
   "description": "Bugsy Assistant",
   "version": "1.0",
-  "options_ui": {
-    "page": "options.html"
-  },
   "action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
@@ -19,7 +16,6 @@
         "<all_urls>"
       ],
       "js": [
-        "js/vendor.js",
         "js/content_script.js"
       ]
     }
@@ -29,7 +25,10 @@
   },
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "contextMenus",
+    "tabs",
+    "webRequest"
   ],
   "host_permissions": [
     "<all_urls>"
