--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
-  "author": "",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
-  },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.10",
+    "@types/react-speech-recognition": "^3.9.5",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
